# vasya-bd-2024

./: .gitignore  CMakeLists.txt  CNAME  game.js  game.wasm  index.html  prepare-thirdparty.sh
assets/: atlas_health_bar.json  oak_woods_tileset.json
src/: emsdl.hpp  globals.cpp  globals.hpp  main.cpp  ui.cpp  ui.hpp
src/entities/: character.hpp  mainCharacter.cpp  mainCharacter.hpp
src/worlds/: startLocation.cpp  startLocation.hpp  world.hpp
